src/test/deca/syntax/invalid/class_class_void.deca
//  Description :
// 
//      Test syntaxiquement incorrect de la déclaration d'une classe sans nom 
// 
//  Résultats : 
// 
//      N/A
// 
//  Historique :
// 
//      Créé le 13/06 par gl03

class {
    
}